Refactor CSV processing to enhance content validation and error handling #2294